[gd_scene load_steps=6 format=3 uid="uid://c5eiodc6x61h"]

[ext_resource type="Script" uid="uid://ci5ughirdgwn8" path="res://scenes/farm.gd" id="1_o03py"]
[ext_resource type="Script" uid="uid://sryc24cvut1g" path="res://scenes/dropper.gd" id="2_jjgid"]
[ext_resource type="PackedScene" uid="uid://c3w4cpinjn8dd" path="res://scenes/seed.tscn" id="2_kjpqf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o03py"]
radius = 337.0534

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jjgid"]
size = Vector2(476.4765, 491.89935)

[node name="Farm" type="ColorRect"]
offset_left = -221.47652
offset_top = -234.89934
offset_right = 237.58391
offset_bottom = 244.2953
color = Color(0.26150593, 0.14489442, 0.021798393, 1)
script = ExtResource("1_o03py")

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 0
offset_left = 494.47653
offset_top = -20.100674
offset_right = 1023.3356
offset_bottom = 527.55035
rotation = 1.5707964
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 466.4765
offset_top = 324.89935
offset_right = 518.8255
offset_bottom = 808.12085
rotation = 1.5707964
color = Color(0.18845937, 0.09082221, 0.005555805, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 458.47653
offset_top = 230.89934
offset_right = 510.82553
offset_bottom = 714.12085
rotation = 1.5707964
color = Color(0.18845937, 0.09082221, 0.005555805, 1)

[node name="ColorRect4" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 458.4765
offset_top = 117.89934
offset_right = 510.8255
offset_bottom = 601.12085
rotation = 1.5707964
color = Color(0.18845937, 0.09082221, 0.005555805, 1)

[node name="ColorRect5" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 469.4765
offset_top = 4.8993397
offset_right = 521.8255
offset_bottom = 488.12085
rotation = 1.5707964
color = Color(0.18845937, 0.09082221, 0.005555805, 1)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(220.47652, 229.89934)
shape = SubResource("CircleShape2D_o03py")

[node name="ZoomPoint" type="Node2D" parent="."]
position = Vector2(217.47652, 233.89934)

[node name="SeedDropper" type="Node2D" parent="."]
visible = false
position = Vector2(206.47652, -364.10065)
script = ExtResource("2_jjgid")

[node name="ColorRect6" parent="SeedDropper" instance=ExtResource("2_kjpqf")]
offset_left = -74.0
offset_top = 11.0
offset_right = -34.0
offset_bottom = 51.000015

[node name="ColorRect" parent="SeedDropper" instance=ExtResource("2_kjpqf")]
offset_left = 14.0
offset_top = 78.0
offset_right = 54.0
offset_bottom = 118.0

[node name="ColorRect2" parent="SeedDropper" instance=ExtResource("2_kjpqf")]
offset_left = 91.0
offset_top = -9.0
offset_right = 131.0
offset_bottom = 31.0

[node name="Seed2" parent="SeedDropper" instance=ExtResource("2_kjpqf")]
offset_left = 34.0
offset_top = -74.0
offset_right = 74.0
offset_bottom = -34.0

[node name="Seed3" parent="SeedDropper" instance=ExtResource("2_kjpqf")]
offset_left = -70.0
offset_top = -75.0
offset_right = -30.0
offset_bottom = -35.0

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(228.23825, 235.94968)
shape = SubResource("RectangleShape2D_jjgid")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
